@@ -40,57 +40,57 @@ namespace SlimDX
 			/// <summary>
 			/// Number of vertices read by input assembler.
 			/// </summary>
-			property long InputAssemblerVertices;
+			property System::Int64 InputAssemblerVertices;
 
 			/// <summary>
 			/// Number of primitives read by the input assembler. This number can be different depending on the primitive topology used. For example, a triangle strip with 6 vertices will produce 4 triangles, however a triangle list with 6 vertices will produce 2 triangles.
 			/// </summary>
-			property long InputAssemblerPrimitives;
+			property System::Int64 InputAssemblerPrimitives;
 
 			/// <summary>
 			/// Number of times a vertex shader was invoked. Direct3D invokes the vertex shader once per vertex.
 			/// </summary>
-			property long VertexShaderInvocations;
+			property System::Int64 VertexShaderInvocations;
 
 			/// <summary>
 			/// Number of times a geometry shader was invoked. When the geometry shader is set to <c>null</c>, this statistic may or may not increment depending on the hardware manufacturer.
 			/// </summary>
-			property long GeometryShaderInvocations;
+			property System::Int64 GeometryShaderInvocations;
 
 			/// <summary>
 			/// Number of primitives output by a geometry shader.
 			/// </summary>
-			property long GeometryShaderPrimitives;
+			property System::Int64 GeometryShaderPrimitives;
 
 			/// <summary>
 			/// Number of primitives that were sent to the rasterizer. When the rasterizer is disabled, this will not increment.
 			/// </summary>
-			property long RasterizedPrimitives;
+			property System::Int64 RasterizedPrimitives;
 
 			/// <summary>
 			/// Number of primitives that were rendered. This may be larger or smaller than CInvocations because after a primitive is clipped sometimes it is either broken up into more than one primitive or completely culled.
 			/// </summary>
-			property long RenderedPrimitives;
+			property System::Int64 RenderedPrimitives;
 
 			/// <summary>
 			/// Number of times a pixel shader was invoked.
 			/// </summary>
-			property long PixelShaderInvocations;
+			property System::Int64 PixelShaderInvocations;
 
 			/// <summary>
 			/// Number of times a hull shader was invoked.
 			/// </summary>
-			property long HullShaderInvocations;
+			property System::Int64 HullShaderInvocations;
 
 			/// <summary>
 			/// Number of times a domain shader was invoked.
 			/// </summary>
-			property long DomainShaderInvocations;
+			property System::Int64 DomainShaderInvocations;
 
 			/// <summary>
 			/// Number of times a compute shader was invoked.
 			/// </summary>
-			property long ComputeShaderInvocations;
+			property System::Int64 ComputeShaderInvocations;
 		
 			/// <summary>
 			/// Tests for equality between two PipelineStatisticss.
